--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,3 @@
-<h1>React is not working!</h1>
-<p>Find me in app/views/static_pages/root.html.erb</p>
+<div id="root">
+  React is not working!
+</div>
