intro css styling on welcome page and modals

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>NoiseNimbus</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
