--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,50 @@
  *= require_tree .
  *= require_self
  */
+
+.mother-app {
+  max-width: 1240px;
+  margin: 0 auto;
+  background-color: lightgray;
+}
+.noise-nimbus {
+  font-family: 'Righteous', cursive;
+  /*font-family: 'Permanent Marker', cursive;
+  font-family: 'Quantico', sans-serif;
+  font-family: 'Inder', sans-serif;*/
+  font-size: 24px;
+
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+.nav-bar * {
+  display: flex;
+}
+
+.session-button {
+  height: 28px;
+  width: 95px;
+  background-color: #4c49d8;
+  border-color: #4c49d8;
+  color: white;
+  padding: auto auto;
+  margin-right: 10px;
+  text-align: center;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.session-modal {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.session-form-box * {
+  display: flex;
+  flex-direction: column;
+}
