--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,53 +15,24 @@
  */
 
 .mother-app {
-  max-width: 1240px;
+  min-height: 100%;
+  /*position: relative;*/
   margin: 0 auto;
+  background-color: magenta;
+}
+
+
+.mother-app .main-container {
+  max-width: 1240px;
   background-color: lightgray;
-}
-.noise-nimbus {
-  font-family: 'Righteous', cursive;
-  /*font-family: 'Permanent Marker', cursive;
-  font-family: 'Quantico', sans-serif;
-  font-family: 'Inder', sans-serif;*/
-  font-size: 24px;
-
+  margin: 0 15%;
+  padding: 0 0;
 }
 
-.nav-bar {
-  display: flex;
-  justify-content: space-between;
-}
-.nav-bar * {
-  display: flex;
-}
-
-.session-button {
-  height: 28px;
-  width: 95px;
-  background-color: #4c49d8;
-  border-color: #4c49d8;
-  color: white;
-  padding: auto auto;
-  margin-right: 10px;
-  text-align: center;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-/*.session-modal {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  left: 50%;
-  height: 600px;
-  width: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}*/
-
-.session-form-box * {
-  display: flex;
-  flex-direction: column;
+footer {
+  height: 46px;
+  width: 100%;
+  position: fixed;
+  bottom: 0%;
+  background-attachment: scroll;
 }
