--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>NoiseNimbus</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet"> -->
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
