--- a/app/assets/stylesheets/user_page.css
+++ b/app/assets/stylesheets/user_page.css
@@ -1,10 +1,33 @@
 .user-page {
-  overflow-y: scroll;
+  margin: 0 30px;
 }
 
 .user-header {
   height: 260px;
-  background-color: lightblue;
+  background: linear-gradient(315deg, rgb(250, 250, 250) 0%, rgb(98, 98, 98) 100%);
+}
+
+.user-header h1 {
+  display: inline;
+  padding: 9px;
+  font-size: 24px;
+  font-family: 'Inder', sans-serif;
+  background-color: black;
+  color: white;
+  position: relative;
+  left: 205px;
+  top: 40px;
+}
+.user-header .user-image-container {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  top: 50%
+  transform: translate(-50%, 0);
+}
+.user-image-container .user-image {
+  width: 100%;
+  height: auto
 }
 
 .tracks-or-listens {
