create song works, need to figure out how to keep track of id for edit and delete

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,13 +17,14 @@
 .mother-app {
   min-height: 100%;
   /*position: relative;*/
-  margin: 0 auto;
-  background-color: magenta;
+  /*margin: 0 auto;*/
+  background-color: lightpink;
 }
 
 
 .mother-app .main-container {
   padding-top: 46px;
+  margin: 0 30px;
   /*max-width: 1240px;*/
   background-color: lightgray;
   z-index: 100;
