play bar basic css outlined, now to add functionality to buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>NoiseNimbus</title>
-
+    <script src="https://use.fontawesome.com/2828281c6f.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet"> -->
     <%= csrf_meta_tags %>
 
