--- a/app/assets/stylesheets/play_bar.css
+++ b/app/assets/stylesheets/play_bar.css
@@ -2,7 +2,33 @@ footer {
   background-color: green;
 }
 
-.play-bar {
-  height: 0px;
+.react-player-container {
+  background-color: #f2f2f2;
   width: 100%;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-buttons {
+  width: 75px;
+  margin-right: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+progress {
+  width: 472px;
+  margin: 0 10px;
+}
+
+.volume-track-queue {
+  margin-left: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.volume-track-queue * {
+  margin-right: 25px;
 }
