--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>NoiseNimbus</title>
+    <!-- ATTRIBUTED TO http://fontawesome.io/ -->
     <script src="https://use.fontawesome.com/2828281c6f.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet"> -->
     <%= csrf_meta_tags %>
