--- a/app/assets/stylesheets/play_bar.css
+++ b/app/assets/stylesheets/play_bar.css
@@ -3,6 +3,7 @@ footer {
 }
 
 .react-player-container {
+  border-top: 1px solid rgb(206, 206, 206);
   background-color: #f2f2f2;
   width: 100%;
   height: 46px;
@@ -18,6 +19,9 @@ footer {
   justify-content: space-between;
 }
 
+i {
+  cursor: pointer;
+}
 progress {
   width: 472px;
   margin: 0 10px;
