--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
 .mother-app {
-  min-height: 100%;
+  /*min-height: 100%;*/
   /*position: relative;*/
   /*margin: 0 auto;*/
   background-color: rgb(242, 242, 242);
@@ -25,7 +25,7 @@
 .mother-app .main-container {
   /*border-left: 0.5px solid rgb(206, 206, 206);
   border-right: 0.5px solid rgb(206, 206, 206);*/
-  padding-top: 46px;
+  padding: 46px 0;
   margin: 0 30px;
   /*max-width: 1240px;*/
   background-color: lightgray;
@@ -36,12 +36,12 @@ header {
   height: 46px;
   width: 100%;
   position: fixed;
-  top: 0%;
+  top: 0;
   z-index: 200;
 }
 footer {
   height: 46px;
   width: 100%;
   position: fixed;
-  bottom: 0%;
+  bottom: 0;
 }
