--- a/app/assets/stylesheets/track_index_item.css
+++ b/app/assets/stylesheets/track_index_item.css
@@ -1,7 +1,3 @@
-.tracks-or-listens-index {
-  margin: 20px 0;
-}
-
 .selected-profile-pic {
   width: 160px;
   box-shadow: rgba(0,0,0,.1)0 0 0 1px inset;
@@ -39,7 +35,7 @@
 
 
 .tracks-or-listens-list li {
-  margin-bottom: 15px;
+  margin-top: 15px;
   /*height: 300px;*/
   display: flex;
 }
