--- a/app/assets/stylesheets/user_page.css
+++ b/app/assets/stylesheets/user_page.css
@@ -5,6 +5,7 @@
   background: linear-gradient(315deg, rgb(250, 250, 250) 0%, rgb(98, 98, 98) 100%);
 }
 
+
 .user-header h1 {
   display: inline;
   padding: 9px;
@@ -26,6 +27,7 @@
 .user-image-container .user-image {
   width: 100%;
   height: auto;
+  border-radius: 50%;
 }
 
 .tracks-or-listens {
