--- a/app/assets/stylesheets/track_page.css
+++ b/app/assets/stylesheets/track_page.css
@@ -1,5 +1,60 @@
 .track-header {
   height: 380px;
-  background: linear-gradient(315deg, rgb(0, 0, 0) 0%, rgb(98, 98, 98) 100%);
+  background: linear-gradient(135deg, rgb(250, 250, 250) 0%, rgb(128, 128, 128) 100%);
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
 
+/*.track-header {
+}*/
+
+.play-details-flexbox {
+  display: flex;
+  flex-direction: row;
+  margin-top: 25px;
+}
+.track-header-play {
+  margin-left: 40px;
+  margin-right: 20px;
+}
+.track-header-details {
+  font-family: Interstate, "Lucida Grande", Arial, sans-serif;
+  font-weight: 100;
+  display: flex;
+  flex-direction: column;
+}
+
+.track-profile-image-box {
+  height: 340px;
+  width: 340px;
+  overflow: hidden;
+}
+
+.track-profile-image {
+  min-width: 100%;
+  min-height: 100%;
+
+}
+
+.track-header-details * {
+  padding: 5px 8px;
+}
+.track-header-username {
+  color: #ccc;
+  font-size: 16px;
+  background-color: rgba(0,0,0,.8);
+  margin-top: 5px;
+}
+
+.track-header-title {
+  color: #fff;
+  font-size: 24px;
+  background-color: rgba(0,0,0,.8);
+  margin-top: 5px;
+}
+
+.track-comments {
+  background-color: white;
+  min-height: calc(100vh - 426px);
 }
