--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>NoiseNimbus</title>
     <!-- ATTRIBUTED TO http://fontawesome.io/ -->
     <script src="https://use.fontawesome.com/2828281c6f.js"></script>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Inder|Permanent+Marker|Quantico|Righteous" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Ubuntu" rel="stylesheet">
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
