--- a/app/assets/stylesheets/nav_bar_session.css
+++ b/app/assets/stylesheets/nav_bar_session.css
@@ -1,22 +1,30 @@
 .logo {
   z-index: 300;
 }
-.logo-button {
+.logo-link-home {
+  padding: 0 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: 100%;
   background-color: #7251c8;
   border-width: 0.1px;
   border-color: #1c1838;
-  color: white;
-  padding: auto auto;
   text-align: center;
   border-radius: 3px;
   cursor: pointer;
-  /*font-family: 'Righteous', cursive;
-  font-family: 'Permanent Marker', cursive;
-  font-family: 'Quantico', sans-serif;*/
-  /*font-family: 'Inder', sans-serif;*/
-  font-family: Interstate, "Lucida Grande", Arial, sans-serif;
-  min-width: 80px;
-  height: auto;
+}
+
+.logo-white {
+  width: auto;
+  height: 45%;
+}
+
+.NOISENIMBUS {
+  color: white;
+  margin-left: 7%;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .nav-bar {
@@ -37,7 +45,6 @@
 }
 
 .session-button {
-  font-family: Interstate, "Lucida Grande", Arial, sans-serif;
   height: 45px;;
   width: 95px;
   background-color: inherit;
