--- a/app/assets/stylesheets/search_bar.css
+++ b/app/assets/stylesheets/search_bar.css
@@ -1,8 +1,20 @@
 .search-input {
   min-width: 325px;
+  max-width: 603px;
   width: 50vw;
   height: 28px;
+  padding: 0 16px;
   border-radius: 4px;
   border: none;
   background-color: #e5e5e5;
+}
+
+.welcome-search {
+  width: 600px;
+  height: 46px;
+  border-radius: 4px;
+  border: none;
+  background-color: #e5e5e5;
+  font-size: 14px;
+  padding: 0 16px;
 }
