--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>NoiseNimbus</title>
-    <!-- ATTRIBUTED TO http://fontawesome.io/ -->
+    <!-- Icons ATTRIBUTED TO http://fontawesome.io/ -->
+
+    <!-- Thanks for the animations https://github.com/daneden/animate.css -->
+    
+    <link rel="stylesheet" href="animate.min.css">
+
     <script src="https://use.fontawesome.com/2828281c6f.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Ubuntu:300,400" rel="stylesheet">
 
     <%= csrf_meta_tags %>
 
