--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,9 @@
  */
 
 
+
+/*Cool CSS animations from https://github.com/daneden/animate.css*/
+
 * {
   font-family: 'Ubuntu', sans-serif;
 }
@@ -26,8 +29,6 @@
 
 
 .mother-app .main-container {
-  /*border-left: 0.5px solid rgb(206, 206, 206);
-  border-right: 0.5px solid rgb(206, 206, 206);*/
   padding: 46px 0;
   margin: 0 30px;
   max-width: 1240px;
