--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -4,21 +4,35 @@
   height: 450px;
   display: flex;
   justify-content: center;
+  align-items: center;
   background: url("https://s3-us-west-1.amazonaws.com/noise-nimbus-dev/defaults/concert.jpeg") no-repeat center center;
   background-size: cover;
 }
 
 .connect-demo {
-max-width: 600px;
+max-width: 500px;
 display: flex;
 justify-content: flex-end;
 align-items: center;
-padding-bottom: 75px;
 flex-direction: column;
+font-weight: 300;
 }
+.connect-demo > * {
+  margin-top: 25px;
+}
+
 
 .connect, .discover {
   color: white;
+  text-align: center;
+}
+
+.connect {
+  font-size: 36px;
+}
+
+.discover {
+  font-size: 18px;
 }
 
 .demo-login {
@@ -27,6 +41,8 @@ flex-direction: column;
   background-color: #7251c8;
   border-radius: 3px;
   border-color: #7251c8;
+  font-size: 18px;
+  font-weight: 300;
   height: 46px;
   width: 210px;
 }
@@ -45,7 +61,7 @@ flex-direction: column;
 }
 
 .welcome-upload {
-  color: 4a4a4a;
+  color: #4a4a4a;
   display: flex;
   justify-content: center;
   align-items: center;
