--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,12 @@
  */
 
 
+html, body, main, .mother-app, .maincontainer {
+  min-height: 100vh;
+}
+.user-page {
+  min-height: calc(100vh - 75px);
+}
 
 /*Cool CSS animations from https://github.com/daneden/animate.css*/
 
