--- a/app/assets/stylesheets/user_page.css
+++ b/app/assets/stylesheets/user_page.css
@@ -1,26 +1,20 @@
+.user-header-box {
+  height: 260px;
+}
 
 
 .user-header {
-  height: 260px;
+  padding: 30px;
   background: linear-gradient(315deg, rgb(250, 250, 250) 0%, rgb(98, 98, 98) 100%);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-
-.user-header h1 {
-  display: inline;
-  padding: 9px;
-  font-size: 24px;
-  font-family: 'Inder', sans-serif;
-  background-color: black;
-  color: white;
-  position: relative;
-  left: 205px;
-  top: 40px;
-}
 .user-header .user-image-container {
   width: 200px;
   height: 200px;
-  position: relative;
+  /*position: relative;*/
   /*top: 50%;*/
   /*transform: translate(-50%, 0);*/
 }
@@ -28,6 +22,16 @@
   width: 100%;
   height: auto;
   border-radius: 50%;
+}
+
+.user-header h1 {
+  margin-left: 2%;
+  margin-bottom: 140px;
+  padding: 9px;
+  font-size: 24px;
+  font-family: 'Inder', sans-serif;
+  background-color: black;
+  color: white;
 }
 
 .tracks-or-listens {
