--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("https://s3-us-west-1.amazonaws.com/noise-nimbus-dev/defaults/concert.jpeg") no-repeat center center;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url("https://s3-us-west-1.amazonaws.com/noise-nimbus-dev/defaults/concert.jpeg") no-repeat center center;
   background-size: cover;
 }
 
