--- a/app/assets/stylesheets/nav_bar_session.css
+++ b/app/assets/stylesheets/nav_bar_session.css
@@ -120,7 +120,8 @@
   border: none;
 }
 
-.user-submit-button {
+#user-submit-button {
+  cursor: pointer;
   background-color: #7251c8;
   color: white;
   border-radius: 3px;
