--- a/app/assets/stylesheets/track_page.css
+++ b/app/assets/stylesheets/track_page.css
@@ -1,3 +1,4 @@
+
 .track-header {
   padding: 30px;
   height: 320px;
@@ -49,11 +50,15 @@
   padding: 5px 8px;
 }
 .track-header-username {
+  text-decoration: none;
   display: inline-block;
   color: #ccc;
   font-size: 16px;
   background-color: rgba(0,0,0,.8);
   margin-top: 5px;
+}
+.track-header-username:hover {
+  color: white;
 }
 
 .track-header-title {
