--- a/app/assets/stylesheets/search_bar.css
+++ b/app/assets/stylesheets/search_bar.css
@@ -18,3 +18,18 @@
   font-size: 14px;
   padding: 0 16px;
 }
+
+.results-link {
+  display: flex;
+}
+
+.results-link div {
+  display: flex;;
+  flex-direction: column;
+}
+
+.results-link img {
+  width: 40;
+  height: 40;
+  float: left;
+}
