app is functioning now

--- a/app/assets/stylesheets/track_page.css
+++ b/app/assets/stylesheets/track_page.css
@@ -41,9 +41,8 @@
 }
 
 .track-profile-image {
-  min-width: 100%;
-  min-height: 100%;
-
+  width: 340px;
+  height: 340px;
 }
 
 .track-header-details * {
