--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <!-- Icons ATTRIBUTED TO http://fontawesome.io/ -->
 
     <!-- Thanks for the animations https://github.com/daneden/animate.css -->
-    
-    <link rel="stylesheet" href="animate.min.css">
+
+    <!-- <link rel="stylesheet" href="animate.min.css"> -->
 
     <script src="https://use.fontawesome.com/2828281c6f.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Ubuntu:300,400" rel="stylesheet">
