--- a/app/assets/stylesheets/play_bar.css
+++ b/app/assets/stylesheets/play_bar.css
@@ -3,6 +3,8 @@ footer {
 }
 
 .react-player-container {
+  position: fixed;
+  bottom: 0;
   border-top: 1px solid rgb(206, 206, 206);
   background-color: #f2f2f2;
   width: 100%;
