--- a/app/assets/stylesheets/user_page.css
+++ b/app/assets/stylesheets/user_page.css
@@ -14,14 +14,16 @@
 .user-header .user-image-container {
   width: 200px;
   height: 200px;
-  /*position: relative;*/
-  /*top: 50%;*/
-  /*transform: translate(-50%, 0);*/
+  /* display: flex;
+  justify-content: center;
+  align-content: center; */
+  overflow: hidden;
+  border-radius: 50%;
 }
 .user-image-container .user-image {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
+  /* width: 100%;
+  height: 90%; */
+  /* border-radius: 50%; */
 }
 
 .user-header h1 {
